<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/homepage"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="8dp"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/email"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppinsregular"
            android:paddingLeft="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/hasbeen"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasbeen"
            android:fontFamily="@font/poppinsregular"
            android:paddingLeft="5dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your2"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your2"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/phone"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone2"
            android:textColor="@color/blue"
            android:paddingLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/hasbeen2"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasbeen2"
            android:paddingLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
