<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/regis"
        android:fontFamily="@font/poppinssemibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/regis"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:inputType="text"
        android:hint="@string/username"
        android:paddingLeft="20sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsregular"
        android:background="@drawable/rounded" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingLeft="20sp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="27dp" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:inputType="phone"
        android:hint="@string/phone"
        android:paddingLeft="20sp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="27dp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingLeft="20sp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="27dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/checking"
            android:textSize="9sp"
            android:padding="2sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            android:buttonTint="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:padding="2sp"
            android:layout_marginTop="8dp"
            android:text="@string/terms"
            android:fontFamily="@font/poppinsregular"
            android:textSize="9sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="2sp"
            android:text="@string/and"
            android:fontFamily="@font/poppinsregular"
            android:textSize="9sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/blue"
            android:padding="2sp"
            android:text="@string/conditions"
            android:fontFamily="@font/poppinsregular"
            android:textSize="9sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/regisBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:layout_marginTop="100dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsmedium"
        android:backgroundTint="@color/blue"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/alreadyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readyAccount"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/loginlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
</LinearLayout>
